[gd_scene load_steps=4 format=3 uid="uid://dcfs57p8b5hkp"]

[ext_resource type="Script" path="res://Scripts/Game/GameManager.gd" id="1_blruj"]

[sub_resource type="LabelSettings" id="LabelSettings_pmqca"]
font_size = 36
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_qnwp3"]
font_size = 36
font_color = Color(0, 0, 0, 1)

[node name="Game" type="Node2D"]
script = ExtResource("1_blruj")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1985.0
offset_bottom = 1142.0

[node name="DiceBTN" type="Button" parent="."]
offset_left = 758.0
offset_top = 389.0
offset_right = 1094.0
offset_bottom = 514.0
text = "Launch dice!"

[node name="DieOne" type="Label" parent="."]
offset_left = 985.0
offset_top = 308.0
offset_right = 1094.0
offset_bottom = 358.0
text = "Empty"
label_settings = SubResource("LabelSettings_pmqca")

[node name="DieTwo" type="Label" parent="."]
offset_left = 758.0
offset_top = 308.0
offset_right = 867.0
offset_bottom = 358.0
text = "Empty"
label_settings = SubResource("LabelSettings_qnwp3")

[connection signal="pressed" from="DiceBTN" to="." method="_on_dice_btn_pressed"]
